[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bevy = "0.12.1"
libloading = "0.8.1"

[dev-dependencies]
# criterion = "0.5"